Fix internal services layout for mobile high contrast (#1784)

--- a/files/app/resource/css/user.css
+++ b/files/app/resource/css/user.css
@@ -490,6 +490,11 @@ body.authenticated .ctrl:hover
 
 /* -- start services layout -- */
 
+#services .service
+{
+    display: flex;
+    align-items: center;
+}
 #services .service,
 #services .device
 {
@@ -500,7 +505,7 @@ body.authenticated .ctrl:hover
 #services .service .status
 {
     display: inline-block;
-    width: calc(var(--font-base-size) * 3 + 4px);
+    min-width: calc(var(--font-base-size) * 3 + 4px);
     padding: 2px 0;
     border-radius: 5px;
     margin-right: 5px;
